--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="intro_message">
         RealityScanner
     </string>
+
+
+    <string name="AttributeHeader">Attributes</string>
+
+    <string name="OutputHeader">Output</string>
 </resources>
